# mynumber

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  addon.d.ts  binding.gyp  compile_flags.txt  index.js  jsconfig.json  main.cpp  package-lock.json  package.json  tsconfig.js-fallback.json  tsconfig.json
.github/workflows/: release.yml
demo/: app.js  index.html  style.css
include/: mynumber.hpp
include/impl/: Combination.hpp  Export.hpp  Operator.hpp  StateValue.hpp  Utils.hpp
include/mynumber/: Combination.hpp  Export.hpp  Solution.hpp
include/polyfill/: generator.hpp  to_underlying.hpp
include/wrapper/: Combination.hpp  Solution.hpp
native-lib/: mynumber.lib
packaging/: project.json
packaging/native-cmake/: CMakeLists.txt  README.md
packaging/native-cmake/cmake/: mynumber.pc.in  mynumberConfig.cmake.in  verify-native-artifact.cmake
packaging/npm/: config.json  mynumber-wasm.package.json  mynumber.package.json
scripts/: build-dist-node.js  build-js-fallback-publish.mjs  common.js  compile-js-fallback.mjs  copy-native-static-lib.js  install-binding.js  install-build-lib.js  install-cleanup.js  install-copy-binding.js  install-release-binary.js  install.js  native-platform.js  npm-version-sync.mjs  package-prebuild.mjs  package-source.mjs  project-meta.mjs  stage-npm-packages.mjs  sync-version.mjs  test-release-pipeline.sh
src/: main.cpp
src/api/: Combination.cpp  Solution.cpp
src/emscripten/: bindings.cpp  index.d.ts  index.js  index.publish.js
src/impl/: Combination.cpp  Combination.hpp  Export.hpp  Operator.cpp  Operator.hpp  StateValue.cpp  StateValue.hpp  Utils.cpp
src/js-fallback/: Combination.ts  Solution.ts  StateValue.ts  Util.ts  index.ts  types.ts
src/node/: index.d.ts  index.js  index.publish.js  native.d.ts  native.js
src/polyfill/: generator.hpp  ranges.hpp
src/wrapper/: Combination.cpp  Combination.hpp  Solution.cpp  Solution.hpp  addon.cpp
test/: combination.test.js  consumer.ts  helpers.js  js-fallback.test.js  wasm.test.js
